fix dropdown content being placed too low

--- a/ui/src/Pages/Media/Dropdown.scss
+++ b/ui/src/Pages/Media/Dropdown.scss
@@ -50,7 +50,7 @@
     flex-direction: column;
     background: var(--secondaryColor);
     position: absolute;
-    top: calc(100% + 1em);
+    top: 100%;
     right: 0;
     white-space: nowrap;
     z-index: 1;
